src/objects/SDHC_Loan__c.object
<CustomObject>
    <description>LPAM - Loan provided by SDHC</description>
    <fields>
        <fullName>Forgivable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forgivable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Calculation__c</fullName>
        <label>Interest Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>360/30</fullName>
                </value>
                <value>
                    <fullName>365/30</fullName>
                </value>
                <value>
                    <fullName>365/365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compound</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lien_Position_Number__c</fullName>
        <label>Lien Position Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Payment_Type__c</fullName>
        <label>Loan Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amortized</fullName>
                </value>
                <value>
                    <fullName>Residual Receipt</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Surplus Cash</fullName>
                </value>
                <value>
                    <fullName>Balloon</fullName>
                </value>
                <value>
                    <fullName>Deferred Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Portfolio_Asset_Project__c</fullName>
        <label>Loan Portfolio Asset Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>SDHC Loans</relationshipLabel>
        <relationshipName>SDHC_Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Reporting_Period__c</fullName>
        <label>Loan Reporting Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fiscal Year</fullName>
                </value>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>HUD Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Term_Expiration__c</fullName>
        <label>Loan Term Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <label>Loan Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Payment__c</fullName>
        <label>Minimum Payment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Payment_Terms__c</fullName>
        <label>Miscellaneous Payment Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Approved_Loan_Amount__c</fullName>
        <description>Total of the Amounts from the SDHC Loan Components</description>
        <label>Original Approved Loan Amount</label>
        <summarizedField>SDHC_Original_Approved_Loan_Component__c.Amount__c</summarizedField>
        <summaryForeignKey>SDHC_Original_Approved_Loan_Component__c.SDHC_Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Origination_Date__c</fullName>
        <label>Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Residual Receipt Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <label>Payoff Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Date__c</fullName>
        <label>Payoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Type__c</fullName>
        <label>Payoff Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pay Off</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SDHC Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SDHC Loan Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDHC Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>